# ragchatbot-codebase

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AUTOMATION_README.md  CLAUDE.md  CLAUDE_WORKFLOWS_COMPARISON.md  FLOWCHART.md  PR_REVIEW_CHECKLIST.md  QUICK_TEST_GUIDE.md  README.md  RUN_GUIDE.md  STAGE6_COMPLETE.md  STAGE6_MERGE_CHECKLIST.md  STAGE7_COMPLETE.md  STAGE7_PLAN.md  STAGE7_TASK1_EXCEPTION_TEST_RESULT.md  STAGE7_TASK1_TEST_RESULT.md  STAGE8_1_COMPLETE.md  STAGE8_2_COMPLETE.md  STAGE8_3_COMPLETE.md  STAGE8_3_PLAN.md  STAGE8_4_STEP1_COMPLETE.md  STAGE8_5_COMPLETE.md  STAGE8_5_PLAN.md  STAGE8_PLAN.md  TROUBLESHOOTING.md  ZHIPU_AGENT_ISSUE_STAGE1.md  ZHIPU_AGENT_ISSUE_STAGE2_PLAN.md  ZHIPU_AGENT_USAGE.md  ZHIPU_AI_AUTOMATION.md  ZHIPU_GUIDE.md  check_github_secrets.py  complete_test.py  frontend-changes.md  pr-review-test.txt  pr-trigger-test.txt  pyproject.toml  setup_automation.bat  setup_automation.sh  (+2 more)
.github/: CLAUDE_AUTOMATION.md  requirements-agent.txt  requirements-pr-review.txt  requirements.txt
.github/ISSUE_TEMPLATE/: zhipu_agent_test.md
.github/scripts/: agent_issue_executor.py  agent_issue_handler.py  claude_issue_handler.py  claude_issue_handler_simple.py  pr_review_handler.py  simple_handler.py  test_agent_issue_local.py  test_stage8_2_validation.py  test_stage8_validation.py  verify_agent_setup.sh
.github/workflows/: claude-issue-handler.yml  code-quality.yml  zhipu-agent-issue-apply.yml  zhipu-agent-issue.yml  zhipu_automation.yml  zhipu_pr_review.yml
backend/: ai_generator.py  app.py  config.py  document_processor.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/.claude/: settings.local.json
backend/tests/: __init__.py  conftest.py  quick_api_test.py  test_ai_generator.py  test_api.py  test_api_endpoint.py  test_document_loading.py  test_rag_system.py  test_search_tools.py  test_sequential_tool_calling.py
docs/: CODE_QUALITY.md  QUALITY_SETUP_COMPLETE.md
docs/archive/zhipu/: ZHIPU_AGENT_ISSUE.md  ZHIPU_AGENT_ISSUE_STAGE1.md  ZHIPU_AGENT_QUICKSTART.md  ZHIPU_AI_AUTOMATION.md
frontend/: index.html  script.js  style.css
scripts/: check_quality.py  dev.bat  dev.sh  format.py
